[metadata]

name=pyflash,
summary=Just a python lib for flash lovers
description_file=README.md
url=https://github.com/hericlesme/PyFlash
requires-python = >=3.6
classifier=
        Intended Audience :: Developers
        Natural Language :: English
        Natural Language :: English
        Programming Language :: Python :: 3.6

[files]
packages=pyflash

[general]
games_folder = /home/ubuntu/PyFlash/games
